--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 /* Styles des divisions principales de la page */
 body{
-    background-color: #77AADD;
+    background-color: #cc0066;
 	background-image: url(imgs/FONDGLOBAL.jpg);
 	background-repeat: repeat-x;
     margin:0% 0%;
@@ -16,8 +16,8 @@ body{
   padding : 0.1em;
 }
 #entete{
-  background-color:rgb(72,198,236);
-	color : #980101;
+  background-color:#cc0066;
+	color : #FFFFFF;
 	border: solid 0.1em #980101;
 	height: 154px;
 	padding: 0em;
@@ -36,7 +36,7 @@ body{
 	margin-top : 0.8em;
 	padding: 1em;
 	background-color: white;
-	color: rgb(0,85,227);
+	color: black;
 	float: left;
 	width: 14%;
 }
@@ -79,13 +79,13 @@ ul#menuList li {
 
 /* apparences des liens dans listes et sous-listes non numérotées */
 ul#menuList a {
-    color:rgb(0,85,227);
+    color:#222222;
     display:block;
     text-decoration:none;
     width:100%;
 }
 ul#menuList a:hover {
-    background: rgb(0,85,227);
+    background: #cc0066;
     color: white;
 }
 
